# linnix

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTILLED_MODEL_INTEGRATION.md  DOCKER_TEST_FINAL_SUMMARY.md  Dockerfile  LICENSE  MIGRATION_EXECUTION_REPORT.md  PERFORMANCE.md  PROCESS_NAMES_ENHANCEMENT.md  QUICKSTART.md  QUICKSTART_PROCESS_NAMES.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  akash-node-retry.yaml  akash-node.yaml  akash-provider-audit-request.md  build-and-push-images.sh  build-ghcr.sh  build-image.sh  cognitod-daemonset.yaml  cpu-hog-pod.yaml  demo-workload.sh  demo_reasoner_with_processes.sh  deny.toml  docker-compose.yml  explain_ebpf_overhead.sh  fix-provider-ports.md  hello-akash-test.yaml  hello-akash.yaml  install-ec2.sh  install-llm-native.sh  push-ghcr.sh  quick-test.sh  quickstart.sh  (+3 more)
.github/workflows/: ci.yml  docker.yml
cognitod/: Cargo.toml
cognitod/migrations/: 004_add_stall_attributions.sql  005_add_attribution_details.sql
cognitod/src/: bpf_config.rs  config.rs  context.rs  enforcement.rs  fake_events.rs  incidents.rs  lib.rs  main.rs  metrics.rs
cognitod/src/api/: mod.rs
cognitod/src/collectors/: psi.rs
cognitod/src/enforcement/: safety.rs
cognitod/src/handler/: cloudflare.rs  ddos.rs  discord.rs  docker.rs  mod.rs  warmth.rs
cognitod/src/runtime/: mod.rs  sequencer.rs  stream_listener.rs
cognitod/src/ui/: dashboard.html
configs/: linnix-local.toml  linnix.akash.toml  linnix.toml  pro-features.toml
configs/systemd/: linnix-cognitod.service
dashboard/: index.html  nginx.conf
docker/: README.md
docker/llama-cpp/: Dockerfile
docs/: AWS_EC2_DEPLOYMENT.md  cpu-overhead-analysis.md  optimization-conditional-monitoring.md  performance-proof.md
infrastructure/akash-provider/: README.md  check_status.sh  import_wallet.sh  install_provider.sh  values.yaml
infrastructure/hetzner/: DEPLOYMENT_GUIDE.sh  README.md  create_vm.sh  setup_host.sh  stress_test_circuit_breaker.sh  validate_cluster.sh
linnix-ai-ebpf/: README.md
linnix-ai-ebpf/linnix-ai-ebpf/: Cargo.toml
linnix-ai-ebpf/linnix-ai-ebpf-common/: Cargo.toml
linnix-ai-ebpf/linnix-ai-ebpf-common/src/: lib.rs
linnix-ai-ebpf/linnix-ai-ebpf-ebpf/: Cargo.toml
linnix-ai-ebpf/linnix-ai-ebpf-ebpf/src/: main.rs  program.rs  rss_trace.rs
linnix-cli/: Cargo.toml
linnix-reasoner/: Cargo.toml
models/: README.md
scripts/: akash-balance.sh  akash-bids.sh  akash-close-stale-bids.sh  akash-earnings.sh  akash-status.sh  benchmark_sequencer.sh  deploy_distilled_model.sh  fetch_insight_schema.py  full_test_suite.sh  generate_wiki.sh  release.sh  test_sequencer.sh  ui_test_runner.sh  validate_api_docs.sh
scripts/_local_tests/: ui_smoke_with_demo.sh
tests/docker/: Dockerfile.agent  Dockerfile.native  README-native.md  README.md  docker-compose.native.yml  docker-compose.yml  linnix-native.toml  reflex.sh  run_test.sh  test_build_only.sh  test_native.sh
xtask/: Cargo.toml
xtask/src/: main.rs
