[workspace]
resolver = "2"
members = [
    "cognitod",
    "linnix-cli",
    "linnix-reasoner",
    "linnix-ai-ebpf/linnix-ai-ebpf-common",
    "linnix-ai-ebpf/linnix-ai-ebpf-ebpf",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/linnix-os/linnix"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.40.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
anyhow = { version = "1", default-features = false }
bytes = "1"
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
env_logger = { version = "0.11", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["derive", "env", "std"] }
which = { version = "6.0.0", default-features = false }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
