[package]
name = "cognitod"
version = "0.2.0"
license = "AGPL-3.0-or-later"
edition = "2024"
description = "eBPF-powered Linux observability platform with AI incident detection"

[dependencies]
bindgen = "0.71.1"
reqwest = { version = "0.12.15", features = ["json"] }
# ✅ Axum and dependencies
axum = {version = "0.8.3", features =["macros"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs", "process"] }
# async handlers and config
async-trait = "0.1"
toml = "0.8"
clap = { workspace = true, features = ["derive"] }
# aya = { workspace = true }
aya = { git = "https://github.com/aya-rs/aya", rev = "fe8e1c48b0f8e14634d55b6abd2207584110546d" }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "fe8e1c48b0f8e14634d55b6abd2207584110546d" }
btf = "0.5.1"
linnix-ai-ebpf-common = { path = "../linnix-ai-ebpf/linnix-ai-ebpf-common", features = ["user"] }
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
bytes = "1"
hyper = "1.0"
tower = "0.5.2"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
sysinfo = "0.36.1"
once_cell = "1"
dashmap = "5"
flate2 = "1"
rand = { version = "0.8", optional = true }
procfs = "0.16"
caps = "0.5"
serde_yaml = "0.9"
libc = "0.2"
jsonschema = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sha2 = "0.10.9"
walkdir = "2.5.0"
memmap2 = "0.9"
nix = { version = "0.29", features = ["time"] }
ctrlc = "3.4"

[[bin]]
name = "cognitod"
path = "src/main.rs"

[[bin]]
name = "sequencer-test"
path = "src/bin/sequencer_test.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tempfile = "3"
reqwest-eventsource = "0.4"

[features]
default = []
ilm-test = []

# Metadata for cargo-deb and cargo-generate-rpm
[package.metadata.deb]
maintainer = "Linnix Team <support@linnix.io>"
copyright = "2025, Linnix Team <support@linnix.io>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Linnix is an eBPF-powered Linux observability platform with AI-powered \
incident detection. It captures process lifecycle events with lightweight \
CPU/memory telemetry and uses machine learning to detect anomalies like \
CPU spins, fork storms, and OOM risks."""
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
    ["target/release/cognitod", "usr/bin/", "755"],
    ["target/release/linnix-cli", "usr/bin/", "755"],
    ["../configs/linnix.toml", "etc/linnix/", "644"],
    ["../configs/rules.yaml", "etc/linnix/", "644"],
    ["../configs/systemd/linnix-cognitod.service", "lib/systemd/system/cognitod.service", "644"],
    ["../setup-llm.sh", "usr/share/linnix/", "755"],
    ["../README.md", "usr/share/doc/cognitod/", "644"],
]
conf-files = [
    "/etc/linnix/linnix.toml",
    "/etc/linnix/rules.yaml",
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = false
start = false

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cognitod", dest = "/usr/bin/cognitod", mode = "755" },
    { source = "target/release/linnix-cli", dest = "/usr/bin/linnix-cli", mode = "755" },
    { source = "../configs/linnix.toml", dest = "/etc/linnix/linnix.toml", mode = "644", config = true },
    { source = "../configs/rules.yaml", dest = "/etc/linnix/rules.yaml", mode = "644", config = true },
    { source = "../configs/systemd/linnix-cognitod.service", dest = "/usr/lib/systemd/system/cognitod.service", mode = "644" },
    { source = "../setup-llm.sh", dest = "/usr/share/linnix/setup-llm.sh", mode = "755" },
    { source = "../README.md", dest = "/usr/share/doc/cognitod/README.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
systemd = "*"
