[package]
name = "linnix-cli"
version = "0.1.0"
edition = "2021"
authors = ["Parth Shah <parth21.shah@gmail.com>"]
description = "CLI tool for consuming process events from Linnix backend via SSE"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linnix-ai-ebpf-common = { path = "../linnix-ai-ebpf/linnix-ai-ebpf-common", features = ["user"] }
colored = "3"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
bytes = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
